gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/info_sem_texto.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346673934570" ID="ID_1037783247" MODIFIED="1346673939315" TEXT="MM">
<node CREATED="1346673940139" ID="ID_875515428" MODIFIED="1346673951812" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRe1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346673968108" ID="ID_628443034" MODIFIED="1346673979948" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1&#xa;">
<node CREATED="1346674604710" ID="ID_411439570" MODIFIED="1346674605719" TEXT="">
<icon BUILTIN="info"/>
<node CREATED="1346674607582" ID="ID_1078413753" MODIFIED="1346674619267" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: PASSO 2"/>
</node>
</node>
</node>
</node>
</map>
